Add first text on tritone subs.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -92,6 +92,21 @@
 
 % }}}
 
+%{{{
+
+\fntext{tft-1}{%
+  The tritone substitution has been discussed extensively in the literature,
+  so we will not discuss it at any length here. See, for example,
+  \cite{biamonte:2008}; \cite{martin:1988}; and \cite{tymoczko:2011}.}
+
+% xxx citations here!
+\fntext{tft-2}{%
+  Möbius strips have a surprising number of applications in music theory. See,
+  for example, Dmitri Tymoczko's two-note voice-leading space
+  (\headlesscite[xxx]{tymoczko:2011}). }
+
+%}}}
+
 %%% Local Variables: %%%
 %%% mode: LaTeX %%%
 %%% TeX-master: "diss" %%%
