--- a/diss.bib
+++ b/diss.bib
@@ -716,7 +716,7 @@ Theory} }
   title       = {The Visual Display of Quantitative Information},
   address     = {Cheshire, CT},
   publisher   = {Graphics Press},
-  edition     = {2nd},
+  edition     = {2nd ed.},
   year        = {2001}
 }
 
