--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -231,7 +231,8 @@
 
 % math shortcuts
 \newcommand{\lra}{\longrightarrow}
-\newcommand{\TFarrow}{\ensuremath{\overset{\mathrm{TF}}{\lra}}}
+\newcommand{\TFarrow}{\ensuremath{\xrightarrow{\mathrm{TF}}}}
+\newcommand{\TFTarrow}{\ensuremath{\xrightarrow{\mathrm{TF}_\mathrm{T}}}}
 \newcommand{\intZ}{\ensuremath{\mathbb{Z}}}
 
 %% end headers.tex %%
