--- a/ch2.tex
+++ b/ch2.tex
@@ -2,6 +2,13 @@
 
 \chapter{Fifths Spaces}
 
+\blankfootnote{Earlier versions of this chapter were presented at
+  the annual meetings of the Music Theory Society of the Mid-Atlantic
+  (Philadelphia, PA, March 2013) and the Society for Music Theory (Milwaukee,
+  WI, November 2014). I am grateful for the many helpful comments and questions
+  I received at these conferences (especially those from Stefan Love, Brian
+  Moseley, and Keith Waters).}%
+%
 Because most jazz is not purely diatonic, we need to expand our
 transformational system to account for more chromatic examples. This chapter
 will begin that work, taking the very common \tfo\ progression as its basis.
@@ -29,13 +36,13 @@ in F.”\fn{tf-2} Given the importance of the progression for improvising jazz
 musicians, it seems natural to use the progression as the basis for developing
 a more general transformational model of jazz harmony.
 
-\exBeg[htbp]
+\exBeg[tbp]
   \centerGraphic[width=20em]{eps/ch2/all-things-bridge.pdf}
   \caption{The bridge of “All the Things You Are” (Jerome Kern).}
   \label{tf:all-things-bridge}
 \exEnd
 
-\figBeg[htbp]
+\figBeg[tbp]
   \centerGraphic[width=15em]{eps/ch2/single-tfo-network.pdf}
   \caption[A transformation network for a single \tfo\ progression.]{A
   transformation network for a \tfo\ in C major: \caph{Dm7}--\caph{G7}--\caph{CM7}.}
@@ -232,7 +239,7 @@ the $T_5$ labels connecting adjacent ii\tsup{7} chords and I\tsup{7} chords
 are shown in gray in the graph (and omitted in the network, and most later
 examples), since these chords are not often directly connected in jazz.
 
-\figBeg[thbp]
+\figBeg[thb]
   \centerGraphic{eps/ch2/tf-circle-fifths.pdf}
   \caption{The complete \tf\ space, arranged around the circle of fifths.}
   \label{tf:tf-circle-fifths}
@@ -256,10 +263,12 @@ pitch-class distance is sufficient in most situations.\fn{tf-9}
 % xxx I could go into ii-V space considered as a graph here...I don’t think
 % it’s really all that necessary?
 
+
 %}}}
 
-\subsection{Analytical Interlude: Lee Morgan, “Ceora”}
 \FloatBarrier
+
+\subsection{Analytical Interlude: Lee Morgan, “Ceora”}
 %{{{
 
 % xxx This whole section should probably be rewritten
