Text on tritone subs.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -1,7 +1,7 @@
 % Chapter 2 notes
 % vim:fdm=marker
 
-% ii-V space {{{
+%{{{ ii-V space
 
 \fntext{tf-1}{%
   \cite{aebersold:1974}. The Aebersold play-along series is a staple of jazz
@@ -90,9 +90,9 @@
   visualizations are often ``more precise and revealing'' than other,
   mathematical means of analyzing data. \headlesscite[13--14]{tufte:2001}.}
 
-% }}}
+%}}}
 
-%{{{
+%{{{ tritone subs
 
 \fntext{tft-1}{%
   The tritone substitution has been discussed extensively in the literature,
@@ -102,9 +102,25 @@
 % xxx citations here!
 \fntext{tft-2}{%
   Möbius strips have a surprising number of applications in music theory. See,
-  for example, Dmitri Tymoczko's two-note voice-leading space
-  (\headlesscite[xxx]{tymoczko:2011}). }
+  for example, % xxx citations needed!
+}
 
+% xxx put this section number in later!
+\fntext{tft-3}{%
+  The \textsc{slide} transformation was introduced by David Lewin
+  (\headlesscite[178]{lewin:gmit}), but has since become a part of of the
+  standard set of Neo-Riemannian transformations. \slideS
+  is defined here only as a transformation from I\tsup{7} chords to
+  ii\tsup{7} chords, but of course the triadic \textsc{slide} is an involution
+  (two successive applications of \textsc{slide} to any triad will result in the
+  starting triad). We can define \slideS so that it acts in a similar way, but
+  we will delay that possibility until Section \ref{}.}
+
+% xxx look up this faure passage
+\fntext{tft-4}{%
+  The \slideS\ transformation can be found in a chromatic sequence in the
+  second movement of the Fauré string quartet. (I am thankful to Julian Hook
+  for pointing this example out to me.)}
 %}}}
 
 %%% Local Variables: %%%
