Add graphics for tritone subs.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -105,6 +105,10 @@
   for example, % xxx citations needed!
 }
 
+\fntext{tft-2a}{%
+  Determining the structure of the underlying transformation graph of this
+  network is straightforward, so I have not included a figure of it here.}
+
 % xxx put this section number in later!
 \fntext{tft-3}{%
   The \textsc{slide} transformation was introduced by David Lewin
