--- a/ch2.tex
+++ b/ch2.tex
@@ -390,9 +390,9 @@ again as \h{Fs} at the top); likewise, progressions disappearing off the
 bottom of the back side reappear at the top of the front side (C major is
 given in both locations).
 
-\begin{figure}[htbp]
-  \centerGraphic{eps/xxx.pdf}
-  \caption{The complete \tf\ space, showing tritone substitutions.}
+\begin{figure}[thb]
+  \centerGraphic{eps/ch2/complete-space.pdf}
+  \caption{The complete \tf space, showing tritone substitutions.}
   \label{tft:complete-space}
 \end{figure}
 
@@ -414,7 +414,7 @@ have the tonic key (when there is one) centrally located on the front of the
 space.
 
 \begin{figure}[htbp]
-  \centerGraphic{eps/xxx.pdf}
+  \centerGraphic{eps/ch2/mobius-dominants.pdf}
   \caption{The Möbius strip at the center of \tf\ space.}
   \label{tft:mobius-dominants}
 \end{figure}
@@ -424,7 +424,7 @@ $T_6$, it is convenient to define another transformation to help with a common
 progression like \h{Dm7}--\h{Db7}--\h{Cmaj7}. We will call this
 transformation \tft, to highlight its relationship to the more normative TF:
 
-\vspace{-3em} % xxx not sure why there’s so much space here
+\vspace*{-3em} % xxx not sure why there’s so much space here
 \begin{alignat*}{3}
     \mathrm{TF}_\mathrm{T}(X\text{\thinspace}) = Y\text{, where}\ X =
         (x_1, x_2, x_3) \in S_1
@@ -449,7 +449,7 @@ this new transformation, we can understand the progression
 \h{Db7} \TFTarrow\ \h{CM7}.
 
 \begin{figure}[htbp]
-  \centerGraphic{eps/xxx.pdf}
+  \centerGraphic{eps/ch2/voice-leading-tft.pdf}
   \caption{Voice leading in the TF and \tft\ transformations, compared.}
   \label{tft:voice-leading-tft}
 \end{figure}
@@ -457,15 +457,15 @@ this new transformation, we can understand the progression
 The introduction of tritone substitutes complicates the space somewhat; Figure
 \ref{tft:tft-space-extract} shows a transformation network of the same portion
 of the space as in Figure \ref{tf:trans-graph-large}, but with some chords
-replaced with their tritone substitutes (shown in green). The relationship
+replaced with their tritone substitutes (shown in green).\fn{tft-2a} The relationship
 between a substituted dominant in G major (\h{Ab7}) and the unsubstituted ii\tsup{7}
 chord in C (\h{Abm7}) is still, of course, a \textsc{3rd} transformation. The
 substituted V\tsup{7} in C moving to the diatonic V\tsup{7} in F changes the
 transposition from a descending fifth to a descending half-step, as indicated
 by the $T_{11}$ arrow.
 
-\begin{figure}[htbp]
-  \centerGraphic{eps/xxx.pdf}
+\begin{figure}[tbp]
+  \centerGraphic{eps/ch2/tft-space-extract.pdf}
   \caption{A transformation network for a small portion of \tf\ space, with
     tritone substitutions.}
   \label{tft:tft-space-extract}
@@ -497,7 +497,7 @@ motion from \h{DbM7} to \h{Dm7} in mm.~5--6 of ``Ceora'' is indeed a typical
 \slideS\ transformation (see Figure \ref{tft:slide7-ceora}).
 
 \begin{figure}[htbp]
-  \centerGraphic{eps/xxx.pdf}
+  \centerGraphic{eps/ch2/slide7-ceora.pdf}
   \caption{The \slideS\ transformation from \protect\caph{DbM7} to
     \protect\caph{Dm7} in mm.~5--6 of ``Ceora.''}
   \label{tft:slide7-ceora}
