Minor updates for tritone subs.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -109,8 +109,14 @@
   Determining the structure of the underlying transformation graph of this
   network is straightforward, so I have not included a figure of it here.}
 
-% xxx put this section number in later!
 \fntext{tft-3}{%
+  Though we are defining chords as ordered triples in this chapter, I have
+  included the fifth in this description to highlight the relationship to the
+  triadic \textsc{slide}, which maintains the root and fifth of a triad while
+  changing the quality of the third.}
+
+% xxx put this section number in later!
+\fntext{tft-3a}{%
   The \textsc{slide} transformation was introduced by David Lewin
   (\headlesscite[178]{lewin:gmit}), but has since become a part of of the
   standard set of Neo-Riemannian transformations. \slideS
