--- a/ch2.tex
+++ b/ch2.tex
@@ -391,7 +391,7 @@ bottom of the back side reappear at the top of the front side (C major is
 given in both locations).
 
 \begin{figure}[thb]
-  \centerGraphic{eps/ch2/complete-space.pdf}
+  \centerGraphic[width=\textwidth]{eps/ch2/complete-space.pdf}
   \caption{The complete \tf space, showing tritone substitutions.}
   \label{tft:complete-space}
 \end{figure}
@@ -477,9 +477,9 @@ fifth below (in this figure, between \h{GM7} and \h{Abm7}). Normally there is
 no voice-leading connection between these two chords, but with the substituted
 ii\tsup{7}, the third and seventh are both held as common tones, and the root
 and fifth of the chord both ascend by semitone (from G--B--D--\h{Fs} to
-\h{Ab}--\h{Cb}--\h{Eb}--\h{Gb}). Because of its similarity to the
+\h{Ab}--\h{Cb}--\h{Eb}--\h{Gb}).\fn{tft-3} Because of its similarity to the
 standard \textsc{slide} transformation, with the addition of the common tone
-seventh, we will call this transformation \slideS:\fn{tft-3}
+seventh, we will call this transformation \slideS:\fn{tft-3a}
 
 \vspace{-3em}
 \begin{displaymath}
