De-suckifying "Blues for Alice" analysis.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -99,13 +99,17 @@
   so we will not discuss it at any length here. See, for example,
   \cite{biamonte:2008}; \cite{martin:1988}; and \cite{tymoczko:2011}.}
 
+\fntext{tft-2a}{%
+  A similar diagram can be found in \cite[5]{pohlert:bh}, and can be seen
+  implicitly in Figure 1-1 of \cite{martin:1988}.}
+
 % xxx citations here!
 \fntext{tft-2}{%
   Möbius strips have a surprising number of applications in music theory. See,
   for example, % xxx citations needed!
 }
 
-\fntext{tft-2a}{%
+\fntext{tft-2b}{%
   Determining the structure of the underlying transformation graph of this
   network is straightforward, so I have not included a figure of it here.}
 
@@ -131,6 +135,38 @@
   The \slideS\ transformation can be found in a chromatic sequence in the
   second movement of the Fauré string quartet. (I am thankful to Julian Hook
   for pointing this example out to me.)}
+
+\fntext{tft-5}{%
+  % xxx citation of "Bird Blues"
+  This progression is often known as the ``Bird Blues,'' though Mark Levine
+  calls it the ``descending blues'' (\headlesscite[228]{levine:1995}). Like many
+  sets of Parker changes, there are many different versions; the changes here
+  represent a mediation of these sources. \emph{The Real Book} gives \h{Am7} (a
+  vi chord) instead of \h{F7} in m.~10; Levine's \emph{Jazz Thoery Book} gives
+  \h{Db7} (a tritone substitute) instead of \h{G7} in the second half of m.~3
+  and does not include the seventh in the \h{F7} of m.~10; and the \emph{Charlie
+  Parker Omnibook} omits both \h{D7} chords (the first in the second half of
+  m.~7, the second in m.~11).\nocite{aebersold:omnibook} Most of these
+  differences are minor, and over the course of a recorded performance the
+  changes might vary among all of these versions. Other compositions that
+  contain this progression include Parker's own ``Confirmation,'' Sonny Stitt's
+  ``Jack Spratt,'' and Toots Thielemans's ``Bluesette.''}
+
+\fntext{tft-6}{%
+  The major-minor seventh chord as a stable chord is characteristic of the
+  blues; see, for example, \cite[158--59 and throughout]{mcgowan:2011}. This
+  fact is somewhat obscured in \tf space, since major-minor sevenths appear
+  in the space only as V\tsup{7} chords; we will return to this limitation
+  later in this chapter.}
+
+\fntext{tft-7}{%
+  At least, impossible if we want to stay within the three sets we are
+  studying in this chapter. Like the other transformations we have defined, EC
+  is an admissible transformation on the set of all mod-12 ordered triples: if
+  we begin with a \h{Dm7} chord, EC gives us $(2, 5, 0) \ECarrow\ (7, 10, 3)$,
+  which of course is not a major, minor, or dominant seventh chord.}
+
+
 %}}}
 
 %%% Local Variables: %%%
