--- a/diss.bib
+++ b/diss.bib
@@ -10,6 +10,13 @@ Theory} }
   series      = {Jamey Aebersold Play-A-Long Series, vol.~3}
 }
 
+@book{aebersold:omnibook,
+  editor      = {Aebersold, Jamie},
+  title       = {Charlie Parker Omnibook},
+  publisher   = {Atlantic Music Corp.},
+  year        = {1978}
+}
+
 @phdthesis{arthurs:2011,
   author      = {Arthurs, Daniel},
   title       = {Reconstructing Tonal Principles in the Music of {Brad
