--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -240,6 +240,8 @@
 \newcommand{\lra}{\longrightarrow}
 \newcommand{\TFarrow}{\ensuremath{\xrightarrow{\mathrm{TF}}}}
 \newcommand{\TFTarrow}{\ensuremath{\xrightarrow{\mathrm{TF}_\mathrm{T}}}}
+\newcommand{\ECarrow}{\ensuremath{\xrightarrow{\mathrm{EC}}}}
+\newcommand{\ECTarrow}{\ensuremath{\xrightarrow{\mathrm{EC}_\mathrm{T}}}}
 \newcommand{\intZ}{\ensuremath{\mathbb{Z}}}
 
 %% end mjmdiss.sty %%
