Change from \thinspace to \, in math regions.

--- a/ch2.tex
+++ b/ch2.tex
@@ -152,15 +152,13 @@ representing a \tf, which we will call simply ``TF'':
 
 \vspace{-3em} % xxx not sure why there’s so much space here
 \begin{alignat*}{3}
-    \mathrm{TF}(X\text{\thinspace}) = Y\text{, where}\ X = (x_1, x_2, x_3) \in S_1
+    \mathrm{TF}(X\,) = Y\text{, where}\ X = (x_1, x_2, x_3) \in S_1
     & \text{ and}\ &
-    Y &= (\text{\thinspace}y_1, y_2, y_3) &= (x_1 + 5, x_3 - 1, x_2) \in S_2 \\
+    Y &= (\,y_1, y_2, y_3) &= (x_1 + 5, x_3 - 1, x_2) \in S_2 \\
     %
-    \mathrm{TF}(Y\text{\thinspace}) = Z\text{, where}\ Y =
-    (\text{\thinspace}y_1, y_2, y_3) \in S_2
+    \mathrm{TF}(Y\,) = Z\text{, where}\ Y = (\,y_1, y_2, y_3) \in S_2
     & \text{ and} &
-    Z &= (z_1, z_2, z_3) &= (\text{\thinspace}y_1 + 5, y_3 - 1, y_2) \in
-    S_3
+    Z &= (z_1, z_2, z_3) &= (\,y_1 + 5, y_3 - 1, y_2) \in S_3
 \end{alignat*}
 \vspace{-3em}
 
@@ -427,16 +425,13 @@ transformation \tft, to highlight its relationship to the more normative TF:
 
 \vspace*{-3em} % xxx not sure why there’s so much space here
 \begin{alignat*}{3}
-    \mathrm{TF}_\mathrm{T}(X\text{\thinspace}) = Y\text{, where}\ X =
-        (x_1, x_2, x_3) \in S_1
+    \mathrm{TF}_\mathrm{T}(X\,) = Y\text{, where}\ X = (x_1, x_2, x_3) \in S_1
     & \text{ and}\ &
-    Y &= (\text{\thinspace}y_1, y_2, y_3) &= (x_1 - 1, x_3 + 5, x_2 + 6) \in S_2 \\
+    Y &= (\,y_1, y_2, y_3) &= (x_1 - 1, x_3 + 5, x_2 + 6) \in S_2 \\
     %
-    \mathrm{TF}_\mathrm{T}(Y\text{\thinspace}) = Z\text{, where}\ Y =
-        (\text{\thinspace}y_1, y_2, y_3) \in S_2
+    \mathrm{TF}_\mathrm{T}(Y\,) = Z\text{, where}\ Y = (\,y_1, y_2, y_3) \in S_2
     & \text{ and} &
-    Z &= (z_1, z_2, z_3) &= (\text{\thinspace}y_1 - 1, y_3 + 5, y_2 + 6) \in
-    S_3
+    Z &= (z_1, z_2, z_3) &= (\,y_1 - 1, y_3 + 5, y_2 + 6) \in S_3
 \end{alignat*}
 \vspace{-3em}
 
@@ -484,10 +479,9 @@ seventh, we will call this transformation \slideS:\fn{tft-3a}
 
 \vspace{-3em}
 \begin{displaymath}
-    \text{\slideS}(X\text{\thinspace}) = Y\text{, where}\ X =
-        (x_1, x_2, x_3) \in S_3
+    \text{\slideS}(X\,) = Y\text{, where}\ X = (x_1, x_2, x_3) \in S_3
      \text{ and}\
-    Y = (\text{\thinspace}y_1, y_2, y_3) = (x_1 + 1, x_2, x_3) \in S_1
+    Y = (\,y_1, y_2, y_3) = (x_1 + 1, x_2, x_3) \in S_1
 \end{displaymath}
 \vspace{-3em}
 
@@ -603,7 +597,9 @@ moves backwards through fifths space to begin a VI--ii--V turnaround to F
 major to begin the next chorus.
 
 % how the space doesn't tell us everything: Fmaj7 to Em7 is very close in
-% terms of voice leading, but not functionally
+% terms of voice leading, but not functionally ...BUT
+% FM7 --> Em7 is very close to the voice leading of the bridge (if you infer a
+% Bb7 chord, then you get FM7 ---> Bb7 ---(ECt)---> Em7
 
 %}}} analytical applications
 
